--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.5.0
 backports.zoneinfo==0.2.1
 boto3==1.22.10
 botocore==1.25.10
+coverage==6.4
 crispy-bootstrap5==0.6
 dj-database-url==0.5.0
 Django==3.2.13
